# swarm-ranging

./: .clang-format  .gitignore  .pylintrc  CMakeLists.txt  Kconfig  README.md  evaluation.txt  evaluation_simulated.txt  platformio.ini  prj.conf  requirements-dev.txt  requirements.txt  west.yaml
.github/workflow/: python_lint.yaml
.github/workflows/: build_zephyr.yaml  documentation.yaml  python_lint.yaml  test.yaml
boards/: decawave_dwm1001_dev.json
boards/arm/nrf52_dwm1001/: Kconfig.defconfig
doc/: api.json
doc/source/: antenna.rst  conf.py  host.rst  index.rst  modules.rst
src/antenna/: configuration.h  host_interface.c  host_interface.h  json_configuration.h  json_configuration_old.h  main.c  message_definition.h  messages.c  messages.h  misc.h  storage.c  timestamps.h  typedefs.h  util.c
src/antenna/common/: configuration.h  storage.h  typedefs.h  util.h
src/antenna/zephyr/: host_interface.c
src/host/: __init__.py  config.py  evaluate.py  evaluate_two.py  main.py  node.py  run_experiments.py  simulate.py  simulate_static.py
src/simulation/: config.py  evaluate.py  node.py  run_experiments.py  simulate.py  simulate_dynamic.py  simulate_static.py
test/antenna/: Makefile  all_tests.c  test_messages.c  test_util.c
test/host/: test_node.py
zephyr/: CMakeLists.txt  Kconfig  test_main.py
zephyr/boards/: decawave_dwm1001_dev.overlay
